@@ -1,3 +1,9 @@
+2002-03-23  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 03140] Forward: Bug#139305: 
+	   w3m: EXTERN_LINK does not work if href ends with ampersand
+	* main.c (invoke_browser): check bg by browser
+
 2002-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* terms.c (term_title): use ttyf instead of stderr
@@ -3281,4 +3287,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.359 2002/03/20 17:53:00 ukai Exp $
+$Id: ChangeLog,v 1.360 2002/03/22 15:35:44 ukai Exp $
